fix container on tablet devices, fix the scale of checkbox

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -195,8 +195,7 @@ input.is-large,
   border-color: transparentize(darken($primary, 25%), .4)
 
 input[type=checkbox]
-  -ms-transform: scale(2) /* IE */
-  -moz-transform: scale(2) /* FF */
-  -webkit-transform: scale(2) /* Safari and Chrome */
-  -o-transform: scale(2) /* Opera */
-  padding: 10px
+  -ms-transform: scale(1.5) /* IE */
+  -moz-transform: scale(1.5) /* FF */
+  -webkit-transform: scale(1.5) /* Safari and Chrome */
+  -o-transform: scale(1.5) /* Opera */
